fix alignment issues

--- a/visionforjamaica/css/main.css
+++ b/visionforjamaica/css/main.css
@@ -37,116 +37,48 @@ a:hover {
 /** Icon Sections**/
 /**section styles**/
 /* line 40, ../sass/main.scss */
-
-/* line 32, ../sass/main.scss */
-p {
-  color: white;
-  font-weight: 300;
-  text-align: center;
-  padding-top: 2rem;
-}
-
-/** Icon Sections**/
-/**section styles**/
-/* line 42, ../sass/main.scss */
-
-/** Icon Sections**/
-/**section styles**/
-/* line 37, ../sass/main.scss */
-
 .what-we-do {
   background-color: #464646;
   padding: 5rem 0;
 }
-
 /* line 43, ../sass/main.scss */
-
-/* line 45, ../sass/main.scss */
-
-/* line 40, ../sass/main.scss */
-
 .what-we-do img {
   padding-top: 4rem;
   padding-bottom: 1rem;
 }
-
 /* line 47, ../sass/main.scss */
-D
-/* line 49, ../sass/main.scss */
 .what-we-do p {
   color: white;
   font-weight: 300;
   text-align: center;
   padding-top: 1rem;
 }
-/* line 55, ../sass/main.scss */
-
-/* line 44, ../sass/main.scss */
-
-.what-we-do p {
-  color: white;
-  font-weight: 300;
-  text-align: center;
-  padding-top: 1rem;
-}
-
 
 /* line 56, ../sass/main.scss */
-
-/* line 64, ../sass/main.scss */
-
-/* line 53, ../sass/main.scss */
-
 .header {
   background: url("img/hero.jpg") no-repeat;
   height: 40rem;
 }
 
 /* vision and mission section styling */
-<<<<<<< HEAD
 /* line 62, ../sass/main.scss */
 .vision-header h2 {
   text-align: center;
 }
 /* line 66, ../sass/main.scss */
-
-/* line 70, ../sass/main.scss */
-.vision-header h2 {
-  text-align: center;
-}
-/* line 74, ../sass/main.scss */
-
-/* line 59, ../sass/main.scss */
-.vision-header h2 {
-  text-align: center;
-}
-/* line 63, ../sass/main.scss */
-
 .vision-header p {
   font-size: 1em;
 }
 
 /* Contact section styling */
-
 /* line 75, ../sass/main.scss */
-
-/* line 83, ../sass/main.scss */
-
-/* line 72, ../sass/main.scss */
-
 .contact-section {
   background: #3c5499;
   padding-top: 5rem;
   color: #fff;
 }
 
-
-/* line 83, ../sass/main.scss */
-
-/* line 91, ../sass/main.scss */
-
-/* line 80, ../sass/main.scss */
-
+/* line 81, ../sass/main.scss */
 button.expand, .button.expand {
   padding-right: 0;
   padding-left: 0;
@@ -156,67 +88,32 @@ button.expand, .button.expand {
   font-size: 1.2rem;
 }
 
-
-/* line 92, ../sass/main.scss */
-
-/* line 102, ../sass/main.scss */
-
-
-/* line 93, ../sass/main.scss */
-
+/* line 90, ../sass/main.scss */
 .contact-section h4 {
   text-align: left;
   padding-left: 4rem;
   color: #fff;
 }
 
-/* line 97, ../sass/main.scss */
-
+/* line 95, ../sass/main.scss */
 .text-align p {
   text-align: center !important;
 }
 
-.contact-section p {
-
-/* line 91, ../sass/main.scss */
-
-p.center-text {
-
-
-/* line 100, ../sass/main.scss */
+/* line 98, ../sass/main.scss */
 .contact-section p {
   color: white;
   text-align: left;
   padding-left: 4rem;
 }
 
-
-/* line 106, ../sass/main.scss */
-
-/* line 105, ../sass/main.scss */
-
-
-/* line 103, ../sass/main.scss */
-
-/* line 94, ../sass/main.scss */
-
-
+/* line 104, ../sass/main.scss */
 .add-padding {
   padding-top: 3rem;
 }
 
 /* Form styles */
-
-/* line 111, ../sass/main.scss */
-
-/* line 110, ../sass/main.scss */
-
-
-/* line 108, ../sass/main.scss */
-
-/* line 99, ../sass/main.scss */
-
-
+/* line 109, ../sass/main.scss */
 input[type="text"],
 input[type="password"],
 input[type="date"],
@@ -238,87 +135,47 @@ textarea {
   background: #ebebeb;
 }
 
-
-/* line 131, ../sass/main.scss */
-
 /* line 129, ../sass/main.scss */
-
-
-/* line 128, ../sass/main.scss */
-
-/* line 118, ../sass/main.scss */
-
-
 textarea {
   margin-top: .5rem;
   height: 20rem;
 }
 
-/* line 136, ../sass/main.scss */
+/* line 134, ../sass/main.scss */
 ::-webkit-input-placeholder {
   color: #464646;
 }
 
-/* line 140, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 :-moz-placeholder {
   /* Firefox 18- */
   color: #464646;
 }
 
-/* line 144, ../sass/main.scss */
+/* line 142, ../sass/main.scss */
 ::-moz-placeholder {
   /* Firefox 19+ */
   color: #464646;
 }
 
-/* line 148, ../sass/main.scss */
+/* line 146, ../sass/main.scss */
 :-ms-input-placeholder {
   color: #464646;
 }
 
 /** Recent Schools section styling**/
-
-/* line 155, ../sass/main.scss */
-
-/* line 136, ../sass/main.scss */
-
-
-/* line 152, ../sass/main.scss */
-
-/* line 125, ../sass/main.scss */
-
-
+/* line 151, ../sass/main.scss */
 .recent-schools-container {
   background: #45ae62;
   padding: 2rem 0;
 }
 
-
-/* line 160, ../sass/main.scss */
-
-/* line 141, ../sass/main.scss */
-
-
-/* line 157, ../sass/main.scss */
-
-/* line 130, ../sass/main.scss */
-
-
+/* line 156, ../sass/main.scss */
 .recent-school-white-bg {
   background: #ffffff;
   padding-top: 0.9rem;
 }
-
-/* line 163, ../sass/main.scss */
-
-/* line 144, ../sass/main.scss */
-
-
-/* line 160, ../sass/main.scss */
-
-/* line 133, ../sass/main.scss */
-
-
+/* line 159, ../sass/main.scss */
 .recent-school-white-bg h4 {
   margin-top: 1rem;
 }
