--- a/visionforjamaica/sass/main.css
+++ b/visionforjamaica/sass/main.css
@@ -84,7 +84,8 @@ textarea {
 
 textarea {
   margin-top: .5rem;
-  height: 15rem; }
+  height: 15rem; 
+}
 
 /** Recent Schools section styling**/
 .recent-schools-container {
